--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,10 @@
 		<servlet-name>ArticleForm</servlet-name>
 		<url-pattern>/articleForm</url-pattern>
 	</servlet-mapping>
+	 <jsp-config>
+        <jsp-property-group>
+            <url-pattern>*.jsp</url-pattern>
+            <include-prelude>/WEB-INF/taglibs.jsp</include-prelude>
+        </jsp-property-group>
+    </jsp-config>
 </web-app>
