--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
+	<classpathentry kind="src" path="resources"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -13,5 +14,24 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/byte-buddy-1.9.10.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/classmate-1.3.4.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/dom4j-2.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/FastInfoset-1.2.15.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/hibernate-commons-annotations-5.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/hibernate-core-5.4.3.Final.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/istack-commons-runtime-3.0.7.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/jandex-2.0.5.Final.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/javassist-3.24.0-GA.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/javax.activation-api-1.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/javax.persistence-api-2.2.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/jaxb-api-2.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/jaxb-runtime-2.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/jboss-logging-3.3.2.Final.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/jboss-transaction-api_1.2_spec-1.1.1.Final.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/stax-ex-1.8.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/hibernate-release-5.4.3.Final/lib/required/txw2-2.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/DEV/lib/postgresql-42.2.23.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
